# bezier

./: .gitignore  CMakeLists.txt  README.md
lib/glfw-3.3.3/: cmake_uninstall.cmake
src/: main.cpp  moremath.h
